// examples/helloworld/grpc/proto/helloworld.proto
syntax = "proto3";

package helloworld;
option go_package = "github.com/HeZephyr/GoMicroKit/examples/helloworld/grpc/proto";

// HelloWorld service definition
service HelloWorld {
  // Say hello
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  
  // Stream hello messages
  rpc SayHelloStream (HelloRequest) returns (stream HelloResponse) {}
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greeting
message HelloResponse {
  string message = 1;
  string time = 2;
}